just experimenting with routes and a component

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>default-platform</title>
+    <script src="https://use.fontawesome.com/d5a57d23ed.js"></script>
   </head>
   <body>
     <div id="app"></div>
