--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <title>default-platform</title>
     <script src="https://use.fontawesome.com/d5a57d23ed.js"></script>
+
+<style>
+  html,
+  body {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+  }
+</style>
+
   </head>
   <body>
     <div id="app"></div>
